force-app/main/default/objects/Invoice__c/fields/Delivery_Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Lead_Time__c</fullName>
    <label>Delivery Lead Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1. Ready Stock</fullName>
            </value>
            <value>
                <fullName>2. 4 to 5 weeks from the date of receipt of Advance.</fullName>
            </value>
            <value>
                <fullName>3. Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>