force-app/main/default/objects/Invoice__c/fields/Invoice_date_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_date_Date__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice date Date</label>
    <type>Date</type>
</CustomField>