force-app/main/default/objects/Invoice__c/fields/Invoiced_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_Quantity__c</fullName>
    <label>Invoiced Quantity</label>
    <summarizedField>InvoiceLineProduct__c.Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>InvoiceLineProduct__c.Quantity__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>InvoiceLineProduct__c.Invoice_Name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>