force-app/main/default/objects/Invoice__c/fields/Salesorder__c.field-meta.xml
<CustomField>
    <fullName>Salesorder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesorder</label>
    <referenceTo>Salesorder__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>