force-app/main/default/objects/Invoice__c/fields/Ware_House__c.field-meta.xml
<CustomField>
    <fullName>Ware_House__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Ware House</label>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>